fix z-index of play button so it is clickable

--- a/trademapper/resources/styles/trademapper.scss
+++ b/trademapper/resources/styles/trademapper.scss
@@ -815,6 +815,7 @@ p.tooltip-location {
 .change-over-time.play-button-section {
 	width: 10%;
 	float: left;
+	z-index: 3;
 }
 
 .change-over-time.play-button {
